load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "ConsistentHashTest",
    srcs = ["ConsistentHashTest.kt"],
    test_class = "org.wfanet.virtualpeople.core.model.utils.ConsistentHashTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/core/model/utils",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "DistributedConsistentHashingTest",
    srcs = ["DistributedConsistentHashingTest.kt"],
    test_class = "org.wfanet.virtualpeople.core.model.utils.DistributedConsistentHashingTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/core/model/utils",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "FieldFiltersMatcherTest",
    srcs = ["FieldFiltersMatcherTest.kt"],
    test_class = "org.wfanet.virtualpeople.core.model.utils.FieldFiltersMatcherTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/core/model/utils",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
